Gonna give it to the committee

--- a/Dbib.bib
+++ b/Dbib.bib
@@ -1,5 +1,16 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
+@article{mead1982conditions,
+  title={Conditions for the definition of a strictly diabatic electronic basis for molecular systems},
+  author={Mead, C Alden and Truhlar, Donald G},
+  journal={The Journal of Chemical Physics},
+  volume={77},
+  number={12},
+  pages={6090--6098},
+  year={1982},
+  publisher={AIP Publishing}
+}
+
 @article{QCHEM4,
 Author = {Y. Shao and Z. Gan and E. Epifanovsky and A. T. B. Gilbert and M. Wormit and J. Kussmann and A. W. Lange and A. Behn and J. Deng and X. Feng and D. Ghosh and M. Goldey and P. R. Horn and L. D. Jacobson and I. Kaliman and R. Z. Khaliullin and T. K\'us and A. Landau and J. Liu and E. I. Proynov and Y. M. Rhee and R. M. Richard and M. A. Rohrdanz and R. P. Steele and E. J. Sundstrom and H. L. {Woodcock III} and P. M. Zimmerman and D. Zuev and B. Albrecht and E. Alguire and B. Austin and G. J. O. Beran and Y. A. Bernard and E. Berquist and K. Brandhorst and K. B. Bravaya and S. T. Brown and D. Casanova and C.-M. Chang and Y. Chen and S. H. Chien and K. D. Closser and D. L. Crittenden and M. Diedenhofen and R. A. {DiStasio Jr.} and H. Dop and A. D. Dutoi and R. G. Edgar and S. Fatehi and L. {Fusti-Molnar} and A. Ghysels and A. {Golubeva-Zadorozhnaya} and J. Gomes and M. W. D. {Hanson-Heine} and P. H. P. Harbach and A. W. Hauser and E. G. Hohenstein and Z. C. Holden and T.-C. Jagau and H. Ji and B. Kaduk and K. Khistyaev and J. Kim and J. Kim and R. A. King and P. Klunzinger and D. Kosenkov and T. Kowalczyk and C. M. Krauter and K. U. Lao and A. Laurent and K. V. Lawler and S. V. Levchenko and C. Y. Lin and F. Liu and E. Livshits and R. C. Lochan and A. Luenser and P. Manohar and S. F. Manzer and S.-P. Mao and N. Mardirossian and A. V. Marenich and S. A. Maurer and N. J. Mayhall and C. M. Oana and R. {Olivares-Amaya} and D. P. O'Neill and J. A. Parkhill and T. M. Perrine and R. Peverati and P. A. Pieniazek and A. Prociuk and D. R. Rehn and E. Rosta and N. J. Russ and N. Sergueev and S. M. Sharada and S. Sharmaa and D. W. Small and A. Sodt and T. Stein and D. St\"uck and Y.-C. Su and A. J. W. Thom and T. Tsuchimochi and L. Vogt and O. Vydrov and T. Wang and M. A. Watson and J. Wenzel and A. White and C. F. Williams and V. Vanovschi and S. Yeganeh and S. R. Yost and Z.-Q. You and I. Y. Zhang and X. Zhang and Y. Zhou and B. R. Brooks and G. K. L. Chan and D. M. Chipman and C. J. Cramer and W. A. {Goddard III} and M. S. Gordon and W. J. Hehre and A. Klamt and H. F. {Schaefer III} and M. W. Schmidt and C. D. Sherrill and D. G. Truhlar and A. Warshel and X. Xua and A. {Aspuru-Guzik} and R. Baer and A. T. Bell and N. A. Besley and J.-D. Chai and A. Dreuw and B. D. Dunietz and T. R. Furlani and S. R. Gwaltney and C.-P. Hsu and Y. Jung and J. Kong and D. S. Lambrecht and W. Liang and C. Ochsenfeld and V. A. Rassolov and L. V. Slipchenko and J. E. Subotnik and T. {Van Voorhis} and J. M. Herbert and A. I. Krylov and P. M. W. Gill and M. {Head-Gordon}},
 Journal = {Molecular Physics},
