--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -31,7 +31,7 @@
 % Foundation Grant E-1765, and the NSF Grant CHE 0956127.
 I would like to offer my sincere gratitude to my thesis comittee, Prof. Eric R. Bittner, Prof. Vassiliy Lubchenko, Prof. Shoujun Xu, Prof. Don Coltart, and Prof. Gila Stein for serving my committee and their help.
 
-I would like to express my deepest gratitude to my advisor Prof. Eric Bittner for the continuous guidance and support of my Ph.D study and related research, especially for his patience and tolerance. I learn and research in a bit uncommon way. Without his tolerance, I could not have finished my Ph.D study.
+I would like to express my deepest gratitude to my advisor Prof. Eric Bittner for the continuous guidance and support of my Ph.D study and related research, especially for his patience and tolerance. I learn and do research in a bit uncommon way. Without his tolerance, I could not have finished my Ph.D study.
 
 I would like to thank my fellow labmates: Allen Kelly, Svitlana Zaster, Hao Li, Kush Patel, Vladimir Lankevich, and Robert Paradez. They, especially Allen, helped me a lot to adapt to the new life here. I would like to thank Dmytro Bavzenko for his pretty thesis template.
 
