--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -35,14 +35,14 @@
 % of the relaxations and its correlation with the Poisson ratio of the
 % substance.
 We present a new, fully {\em ab initio} approach for computing intramolecular charge and
-energy transfer rates.  Using a time-convolutionless master equation approach and parameterized
-using couplings obtained using an accurate quantum chemical approach, we  benchmark the approach
-against  experimental results and Marcus theory rates for triplet energy transfer for a
+energy transfer rates.  Using a time-convolutionless master equation approach, parameterized
+with couplings obtained from an accurate quantum chemical approach, we  benchmark the approach
+against  experimental results and predictions from Marcus theory for triplet energy transfer for a
 series of donor-bridge-acceptor systems.
 An important component of our analysis is the use of a projection operator scheme
 that parses out specific internal nuclear motions that accompany
 the electronic transition.
-Using an iterative Lanczos approach, we  concentrate the coupling between the electronic and nuclear
+Using an iterative Lanczos method, we  concentrate the coupling between the electronic and nuclear
 degrees of freedom into a small number of reduced harmonic modes.
 We find that  using only a single reduced mode--termed the ``primary mode'' or ``Lanczos modes'',
  one obtains an accurate evaluation of the golden-rule rate constant and
@@ -54,6 +54,6 @@ the donor and acceptor moieties. Upon investigating the molecular geometry chang
 broken into two steps, in the agreement of Born-Oppenheimer approximation:  a fast excitation transfer occurs, facilitated by the ``primary Lanczos mode'' (PLM),
 followed by slow nuclear relaxation on the final electronic diabatic surface.
 
-We apply the method to a larger, ``star'' molecule, which has been experimentally shown  that its exciton transfer pathway can be radically modified by mode-specific infrared excitation of vibrations. The primary mode and rate constants we obtain generally agree with the experiments.
+We apply the method to a larger, ``star'' molecule, that has been experimentally shown  that its exciton transfer pathway can be radically modified by mode-specific infrared excitation of its vibrational mode. The primary mode and rate constants we obtain generally agree with the experiments.
 \endgroup
 \vfill
