--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -35,8 +35,8 @@
 % of the relaxations and its correlation with the Poisson ratio of the
 % substance.
 We present a new, fully {\em ab initio} approach for computing intramolecular charge and
-energy transfer rates.  Using a time-convolutionless master equation approach, parameterized
-with couplings obtained from an accurate quantum chemical approach, we  benchmark the approach
+energy transfer rates.  Using a time-convolutionless master-equation approach, parameterized
+with couplings obtained from an accurate quantum-chemical approach, we  benchmark the approach
 against  experimental results and predictions from Marcus theory for triplet energy transfer for a
 series of donor-bridge-acceptor systems.
 An important component of our analysis is the use of a projection operator scheme
